--- a/loans-service/src/main/resources/application.properties
+++ b/loans-service/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
