chore: configure the service to read properties from GitHub repo

--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.application.name=config-server
+spring.profiles.active=git
 
+spring.cloud.config.server.git.uri=https://github.com/valchukav/bank-app-config.git
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.default-label=main
+
+server.port=8888
