--- a/cards-service/src/main/resources/application.properties
+++ b/cards-service/src/main/resources/application.properties
@@ -1,15 +1,6 @@
+spring.application.name=cards-service
+spring.profiles.active=h2
+spring.config.import=optional:configserver:http://localhost:8888
+
 server.port=9000
-
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
