--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.default-label=main
 
 server.port=8888
+
+#-X POST http://localhost:8888/encrypt 'value to encrypt'
+encrypt.key=valchuka2919!rws
