--- a/accounts-service/build.gradle
+++ b/accounts-service/build.gradle
@@ -13,6 +13,7 @@ java {
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 ext {
@@ -21,11 +22,14 @@ ext {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+    implementation "io.github.resilience4j:resilience4j-spring-boot2"
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
