feat: implement circuit breaker pattern to Account service

--- a/eureka-server/build.gradle
+++ b/eureka-server/build.gradle
@@ -35,3 +35,8 @@ dependencyManagement {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.named("bootBuildImage") {
+    imageName = "avalc/${rootProject.name}:${version}"
+    pullPolicy = "IF_NOT_PRESENT"
+}
