--- a/config-server/build.gradle
+++ b/config-server/build.gradle
@@ -34,3 +34,9 @@ dependencyManagement {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.named("bootBuildImage") {
+    imageName = "avalc/${rootProject.name}:${version}"
+    pullPolicy = "IF_NOT_PRESENT"
+}
+
