--- a/loans-service/build.gradle
+++ b/loans-service/build.gradle
@@ -45,3 +45,9 @@ dependencyManagement {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.named("bootBuildImage") {
+    imageName = "avalc/${rootProject.name}:${version}"
+    pullPolicy = "IF_NOT_PRESENT"
+}
+
