chore: provide log tracing with Zipkin

--- a/accounts-service/build.gradle
+++ b/accounts-service/build.gradle
@@ -31,6 +31,9 @@ dependencies {
 
     implementation "io.github.resilience4j:resilience4j-spring-boot2"
 
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin'
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
