--- a/cards-service/src/main/resources/application.properties
+++ b/cards-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=cards-service
-spring.profiles.active=h2
+spring.profiles.active=h2,zipkin
 spring.config.import=optional:configserver:http://localhost:8888
 
