--- a/gateway-server/src/main/resources/application.properties
+++ b/gateway-server/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=gateway-server
 spring.config.import=optional:configserver:http://localhost:8888
 
 server.port=8765
+
+spring.profiles.active=zipkin
