--- a/loans-service/src/main/resources/application.properties
+++ b/loans-service/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=loans-service
-spring.profiles.active=h2
+spring.profiles.active=h2,zipkin
 spring.config.import=optional:configserver:http://localhost:8888
