chore: add RabbitMQ for logs messaging

--- a/accounts-service/build.gradle
+++ b/accounts-service/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
     implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin'
+    implementation 'org.springframework.amqp:spring-rabbit'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
