--- a/gateway-server/build.gradle
+++ b/gateway-server/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
     implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin'
+    implementation 'org.springframework.amqp:spring-rabbit'
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
