--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,18 @@ version: '3.8'
 
 services:
 
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=password
+    networks:
+      - bank-app-network
+    depends_on:
+      - prometheus
+
   prometheus:
     image: prom/prometheus:latest
     ports:
