--- a/.kubernetes/3_config-server.yml
+++ b/.kubernetes/3_config-server.yml
@@ -26,6 +26,11 @@ spec:
                 configMapKeyRef:
                   name: bankapp-configmap
                   key: MANAGEMENT_ZIPKIN_TRACING_ENDPOINT
+            - name: SPRING_ZIPKIN_BASEURL
+              valueFrom:
+                configMapKeyRef:
+                  name: bankapp-configmap
+                  key: SPRING_ZIPKIN_BASEURL
 ---
 apiVersion: v1
 kind: Service
