--- a/.kubernetes/4_eureka-server.yml
+++ b/.kubernetes/4_eureka-server.yml
@@ -31,6 +31,11 @@ spec:
                 configMapKeyRef:
                   name: bankapp-configmap
                   key: SPRING_CONFIG_IMPORT
+            - name: SPRING_ZIPKIN_BASEURL
+              valueFrom:
+                configMapKeyRef:
+                  name: bankapp-configmap
+                  key: SPRING_ZIPKIN_BASEURL
 ---
 apiVersion: v1
 kind: Service
