--- a/.kubernetes/6_loans-service.yml
+++ b/.kubernetes/6_loans-service.yml
@@ -36,6 +36,11 @@ spec:
                 configMapKeyRef:
                   name: bankapp-configmap
                   key: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
+            - name: SPRING_ZIPKIN_BASEURL
+              valueFrom:
+                configMapKeyRef:
+                  name: bankapp-configmap
+                  key: SPRING_ZIPKIN_BASEURL
 ---
 apiVersion: v1
 kind: Service
