--- a/.kubernetes/helm/bankapp-services/accounts-service/values.yaml
+++ b/.kubernetes/helm/bankapp-services/accounts-service/values.yaml
@@ -10,6 +10,7 @@ replicaCount: 1
 image:
   repository: docker.io/avalc/accounts-service
   tag: latest
+  imagePullPolicy: IfNotPresent
 
 containerPort: 8080
 
