--- a/.kubernetes/helm/env/dev-env/values.yaml
+++ b/.kubernetes/helm/env/dev-env/values.yaml
@@ -3,4 +3,4 @@ global:
   zipkinTracingURL: http://zipkin:9411/api/v2/spans
   zipkinBaseURL: http://zipkin:9411/
   configServerURL: configserver:http://config-server:8888/
-  eurekaServerURL: http://eurekaserver:8761/eureka-server/
+  eurekaServerURL: http://eureka-server:8761/eureka/
