--- a/.kubernetes/helm/bankapp-services/cards-service/values.yaml
+++ b/.kubernetes/helm/bankapp-services/cards-service/values.yaml
@@ -10,6 +10,7 @@ replicaCount: 1
 image:
   repository: docker.io/avalc/cards-service
   tag: latest
+  imagePullPolicy: IfNotPresent
 
 containerPort: 9000
 
