--- a/.kubernetes/helm/bankapp-services/config-server/values.yaml
+++ b/.kubernetes/helm/bankapp-services/config-server/values.yaml
@@ -10,6 +10,7 @@ replicaCount: 1
 image:
   repository: docker.io/avalc/config-server
   tag: latest
+  imagePullPolicy: IfNotPresent
 
 containerPort: 8888
 
