--- a/.kubernetes/helm/bankapp-services/eureka-server/values.yaml
+++ b/.kubernetes/helm/bankapp-services/eureka-server/values.yaml
@@ -10,6 +10,7 @@ replicaCount: 1
 image:
   repository: docker.io/avalc/eureka-server
   tag: latest
+  imagePullPolicy: IfNotPresent
 
 containerPort: 8761
 
