--- a/gateway-server/src/main/resources/application.properties
+++ b/gateway-server/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.config.import=optional:configserver:http://localhost:8888
 server.port=8765
 
 spring.profiles.active=zipkin
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:7080/realms/master/protocol/openid-connect/certs
