--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -141,6 +141,7 @@ services:
       - accounts-service
       - loans-service
       - cards-service
+      - keycloak
     deploy:
       restart_policy:
         condition: on-failure
@@ -154,6 +155,7 @@ services:
       SPRING.ZIPKIN.BASEURL: http://zipkin-server:8411/
       RABBIT_URI: amqp://guest:guest@rabbitmq:5672
       SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING.SECURITY.OAUTH2.RESOURCESERVER.JWT.JWKSETURI: http://keycloak:8080/realms/master/protocol/openid-connect/certs
 
   zipkin-server:
     image: openzipkin/zipkin:2.24
@@ -176,6 +178,26 @@ services:
       - "15672:15672"
     networks:
       - bank-app-network
+
+  keycloak:
+      image: quay.io/keycloak/keycloak:22.0.1
+      environment:
+        KEYCLOAK_USER: admin
+        KEYCLOAK_PASSWORD: admin
+        KEYCLOAK_ADMIN: admin
+        KEYCLOAK_ADMIN_PASSWORD: admin
+      restart: unless-stopped
+      volumes:
+        - keycloak:/opt/keycloak/data/
+      ports:
+        - "7080:8080"
+      networks:
+        - bank-app-network
+      command:
+        - start-dev
+
+volumes:
+  keycloak:
 
 networks:
   bank-app-network:
