chore: update Helm charts due to keycloak server

--- a/.kubernetes/helm/bankapp-common/templates/configmap.yml
+++ b/.kubernetes/helm/bankapp-common/templates/configmap.yml
@@ -8,4 +8,5 @@ data:
   SPRING_ZIPKIN_BASEURL: {{ .Values.global.zipkinBaseURL }}
   SPRING_CONFIG_IMPORT: {{ .Values.global.configServerURL }}
   EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: {{ .Values.global.eurekaServerURL }}
+  SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK-SET-URI: {{ .Values.global.keycloakURL }}
 {{- end -}}
