--- a/loans-service/src/main/resources/application.properties
+++ b/loans-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=loans-service
 spring.profiles.active=h2,zipkin
 spring.config.import=optional:configserver:http://localhost:8888
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:7080/realms/master/protocol/openid-connect/certs
