refactor: updates due to security changes

--- a/cards-service/src/main/resources/application.properties
+++ b/cards-service/src/main/resources/application.properties
@@ -1,5 +1,3 @@
 spring.application.name=cards-service
-spring.profiles.active=h2,zipkin
+spring.profiles.active=h2,zipkin,oauth2
 spring.config.import=optional:configserver:http://localhost:8888
-
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:7080/realms/master/protocol/openid-connect/certs
