--- a/gateway-server/build.gradle
+++ b/gateway-server/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'org.springframework.amqp:spring-rabbit'
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-oauth2-client'
     implementation 'org.springframework.security:spring-security-oauth2-resource-server'
     implementation 'org.springframework.security:spring-security-oauth2-jose'
 
