--- a/loans-service/build.gradle
+++ b/loans-service/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.security:spring-security-oauth2-resource-server'
+    implementation 'org.springframework.security:spring-security-oauth2-client'
     implementation 'org.springframework.security:spring-security-oauth2-jose'
 
     compileOnly 'org.projectlombok:lombok'
