refactor: update Helm charts due to security changes

--- a/.kubernetes/helm/bankapp-common/templates/configmap.yml
+++ b/.kubernetes/helm/bankapp-common/templates/configmap.yml
@@ -9,4 +9,5 @@ data:
   SPRING_CONFIG_IMPORT: {{ .Values.global.configServerURL }}
   EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: {{ .Values.global.eurekaServerURL }}
   SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK-SET-URI: {{ .Values.global.keycloakURL }}
+  SPRING.SECURITY.OAUTH2.CLIENT.PROVIDER.KEYCLOAK.TOKEN-URI: {{ .Values.global.keycloakTokenURI }}
 {{- end -}}
