--- a/.kubernetes/helm/env/dev-env/values.yaml
+++ b/.kubernetes/helm/env/dev-env/values.yaml
@@ -5,3 +5,4 @@ global:
   configServerURL: configserver:http://config-server:8888/
   eurekaServerURL: http://eureka-server:8761/eureka/
   keycloakURL: http://keycloak:7080/realms/master/protocol/openid-connect/certs
+  keycloakTokenURI: http://keycloak:7080/realms/master/protocol/openid-connect/token
